syntax = "proto3";
package lottery.lottery;

option go_package = "lottery/x/lottery/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "lottery/lottery/system_info.proto";
import "lottery/lottery/lottery.proto";

message EvtSystemInfoUpdated {
  SystemInfo systemInfo = 1;
}
message EvtLotteryBegan {
  Lottery lottery = 1;
}
message EvtLotteryEnded {
  Lottery lottery = 1;
}
message EvtCreateBet {
  string lotteryId = 1;
  int64 betIndex = 2;
  string creator = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin amount = 4 [(gogoproto.nullable) = false];
  int64 at = 5;
}